--- a/imageApp/Base.lproj/Main.storyboard
+++ b/imageApp/Base.lproj/Main.storyboard
@@ -91,6 +91,7 @@
                     <navigationItem key="navigationItem" id="2WF-Cb-KUz"/>
                     <connections>
                         <outlet property="tableView" destination="GSw-xT-2PE" id="shS-sV-KiO"/>
+                        <segue destination="KyH-Ri-LaU" kind="show" identifier="ShowSingleImage" id="eB0-WY-CeG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -173,6 +174,36 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l2V-Tv-r6f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-318.32061068702291" y="-679.57746478873241"/>
+        </scene>
+        <!--Single Image View Controller-->
+        <scene sceneID="nnp-pg-8gP">
+            <objects>
+                <viewController id="KyH-Ri-LaU" customClass="SingleImageViewController" customModule="imageApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g8B-fx-iac">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="AIu-6q-jMf">
+                                <rect key="frame" x="0.0" y="103" width="393" height="666"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="8B3-FR-8I4"/>
+                        <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="8B3-FR-8I4" firstAttribute="trailing" secondItem="AIu-6q-jMf" secondAttribute="trailing" id="I4d-Kp-wLp"/>
+                            <constraint firstItem="AIu-6q-jMf" firstAttribute="top" secondItem="8B3-FR-8I4" secondAttribute="top" id="J4m-dW-gYH"/>
+                            <constraint firstItem="8B3-FR-8I4" firstAttribute="bottom" secondItem="AIu-6q-jMf" secondAttribute="bottom" id="KSI-r4-Oct"/>
+                            <constraint firstItem="AIu-6q-jMf" firstAttribute="leading" secondItem="8B3-FR-8I4" secondAttribute="leading" id="bmh-PW-wJj"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="dT6-fi-4Mf"/>
+                    <connections>
+                        <outlet property="imageView" destination="AIu-6q-jMf" id="pO4-dh-Tzc"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="G9Q-rk-VVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1512" y="-15"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="Rsn-HN-PCT">
