--- a/imageApp/Base.lproj/Main.storyboard
+++ b/imageApp/Base.lproj/Main.storyboard
@@ -183,9 +183,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="AIu-6q-jMf">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="N8y-KI-vus">
+                                <rect key="frame" x="-20" y="-20" width="433" height="892"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="AIu-6q-jMf">
+                                        <rect key="frame" x="0.0" y="0.0" width="1600" height="1059"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <viewLayoutGuide key="contentLayoutGuide" id="aST-2M-Ll3"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="It3-EX-Maz"/>
+                                <connections>
+                                    <outlet property="delegate" destination="KyH-Ri-LaU" id="saP-Ed-6Qy"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dZb-FJ-pOT">
                                 <rect key="frame" x="8" y="8" width="48" height="48"/>
                                 <constraints>
@@ -202,17 +213,18 @@
                         <viewLayoutGuide key="safeArea" id="8B3-FR-8I4"/>
                         <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="AIu-6q-jMf" firstAttribute="bottom" secondItem="g8B-fx-iac" secondAttribute="bottom" id="2u7-Dr-Kbo"/>
+                            <constraint firstItem="8B3-FR-8I4" firstAttribute="leading" secondItem="N8y-KI-vus" secondAttribute="leading" id="5L3-ud-whc"/>
                             <constraint firstItem="dZb-FJ-pOT" firstAttribute="top" secondItem="8B3-FR-8I4" secondAttribute="top" constant="8" id="Nid-K4-v3K"/>
+                            <constraint firstItem="N8y-KI-vus" firstAttribute="bottom" secondItem="8B3-FR-8I4" secondAttribute="bottom" id="ayG-LH-gT6"/>
+                            <constraint firstItem="N8y-KI-vus" firstAttribute="trailing" secondItem="8B3-FR-8I4" secondAttribute="trailing" id="b49-Cs-3Dl"/>
                             <constraint firstItem="dZb-FJ-pOT" firstAttribute="leading" secondItem="8B3-FR-8I4" secondAttribute="leading" constant="8" id="dB2-OD-ZeZ"/>
-                            <constraint firstItem="AIu-6q-jMf" firstAttribute="trailing" secondItem="g8B-fx-iac" secondAttribute="trailing" id="fRd-LY-ncm"/>
-                            <constraint firstItem="AIu-6q-jMf" firstAttribute="top" secondItem="g8B-fx-iac" secondAttribute="top" id="jQ1-sU-Wwz"/>
-                            <constraint firstItem="AIu-6q-jMf" firstAttribute="leading" secondItem="g8B-fx-iac" secondAttribute="leading" id="rZU-Gb-jvR"/>
+                            <constraint firstItem="8B3-FR-8I4" firstAttribute="top" secondItem="N8y-KI-vus" secondAttribute="top" id="l34-kW-TqV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="dT6-fi-4Mf"/>
                     <connections>
                         <outlet property="imageView" destination="AIu-6q-jMf" id="pO4-dh-Tzc"/>
+                        <outlet property="scrollView" destination="N8y-KI-vus" id="oGH-n5-Uqo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="G9Q-rk-VVy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
