Changed top-constraint of table

--- a/imageApp/Base.lproj/Main.storyboard
+++ b/imageApp/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="GSw-xT-2PE">
-                                <rect key="frame" x="0.0" y="44" width="393" height="808"/>
+                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                                 <color key="backgroundColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <color key="separatorColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <prototypes>
@@ -82,9 +82,9 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="GSw-xT-2PE" secondAttribute="trailing" id="3QT-p5-43j"/>
+                            <constraint firstAttribute="trailing" secondItem="GSw-xT-2PE" secondAttribute="trailing" id="3QT-p5-43j"/>
                             <constraint firstItem="GSw-xT-2PE" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottom" id="DKL-6y-pit"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="top" secondItem="GSw-xT-2PE" secondAttribute="top" constant="59" id="UKu-1W-cRI"/>
+                            <constraint firstAttribute="top" secondItem="GSw-xT-2PE" secondAttribute="top" id="UKu-1W-cRI"/>
                             <constraint firstItem="GSw-xT-2PE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="yZV-5M-1TC"/>
                         </constraints>
                     </view>
@@ -199,8 +199,8 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="Sxy-YF-5ff" kind="relationship" relationship="viewControllers" id="BS1-9M-lIg"/>
                         <segue destination="eEz-n1-MwG" kind="relationship" relationship="viewControllers" id="C1n-7x-RZo"/>
+                        <segue destination="Sxy-YF-5ff" kind="relationship" relationship="viewControllers" id="bfY-Pw-Bal"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Ch-75-VSe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
